quarkus/product/argocd/plain-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
labels:
  app: product
name: product
spec:
replicas: 1
selector:
  app: product
  deploymentconfig: product
strategy:
  activeDeadlineSeconds: 21600
  resources: {}
  rollingParams:
    intervalSeconds: 1
    maxSurge: 25%
    maxUnavailable: 25%
    timeoutSeconds: 600
    updatePeriodSeconds: 1
  type: RollingUpdate
template:
  metadata:
    labels:
      app: product
      deploymentconfig: product
  spec:
    containers:
    - env:
      - name: SOME_VAR
        value: SOME_VAL
      image: quay.io/justindav1s/product:ae71991
      imagePullPolicy: Always
      livenessProbe:
        failureThreshold: 5
        httpGet:
          path: /health/live
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 5
        successThreshold: 1
        timeoutSeconds: 1
      name: product
      readinessProbe:
        failureThreshold: 5
        httpGet:
          path: /health/ready
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 5
        successThreshold: 1
        timeoutSeconds: 1
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /config
        name: product-config-vol
    dnsPolicy: ClusterFirst
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: product-sa
    serviceAccountName: product-sa
    terminationGracePeriodSeconds: 30
    volumes:
    - configMap:
        defaultMode: 420
        name: product-config
      name: product-config-vol
